human-intervention-logs/org.springframework.boot:spring-boot-liquibase:4.1.0/gradle-test/gradle-test-2026-06-26T21-20-25-687617Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.springframework.boot:spring-boot-liquibase:4.1.0
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8466-a2dd31e9/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 3 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :tck-test-support:processResources UP-TO-DATE
> Task :classes UP-TO-DATE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
> Task :jar UP-TO-DATE

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8466-a2dd31e9/tests/src/org.springframework.boot/spring-boot-liquibase/4.1.0/src/test/java/org_springframework_boot/spring_boot_liquibase/Spring_boot_liquibaseTest.java:30: error: package org.springframework.boot.autoconfigure does not exist
import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
                                             ^
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8466-a2dd31e9/tests/src/org.springframework.boot/spring-boot-liquibase/4.1.0/src/test/java/org_springframework_boot/spring_boot_liquibase/Spring_boot_liquibaseTest.java:178: error: cannot find symbol
    @EnableAutoConfiguration
     ^
  symbol:   class EnableAutoConfiguration
  location: class Spring_boot_liquibaseTest
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8466-a2dd31e9/tests/src/org.springframework.boot/spring-boot-liquibase/4.1.0/src/test/java/org_springframework_boot/spring_boot_liquibase/Spring_boot_liquibaseTest.java:193: error: cannot find symbol
    @EnableAutoConfiguration
     ^
  symbol:   class EnableAutoConfiguration
  location: class Spring_boot_liquibaseTest
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8466-a2dd31e9/tests/src/org.springframework.boot/spring-boot-liquibase/4.1.0/src/test/java/org_springframework_boot/spring_boot_liquibase/Spring_boot_liquibaseTest.java:203: error: cannot access ConnectionDetails
    private static final class H2LiquibaseConnectionDetails implements LiquibaseConnectionDetails {
                                                                       ^
  class file for org.springframework.boot.autoconfigure.service.connection.ConnectionDetails not found
4 errors

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8466-a2dd31e9/tests/src/org.springframework.boot/spring-boot-liquibase/4.1.0/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8466-a2dd31e9/tests/src/org.springframework.boot/spring-boot-liquibase/4.1.0/src/test/java/org_springframework_boot/spring_boot_liquibase/Spring_boot_liquibaseTest.java:203: error: cannot access ConnectionDetails
      private static final class H2LiquibaseConnectionDetails implements LiquibaseConnectionDetails {
                                                                         ^
    class file for org.springframework.boot.autoconfigure.service.connection.ConnectionDetails not found
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8466-a2dd31e9/tests/src/org.springframework.boot/spring-boot-liquibase/4.1.0/src/test/java/org_springframework_boot/spring_boot_liquibase/Spring_boot_liquibaseTest.java:178: error: cannot find symbol
      @EnableAutoConfiguration
       ^
    symbol:   class EnableAutoConfiguration
    location: class Spring_boot_liquibaseTest
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8466-a2dd31e9/tests/src/org.springframework.boot/spring-boot-liquibase/4.1.0/src/test/java/org_springframework_boot/spring_boot_liquibase/Spring_boot_liquibaseTest.java:193: error: cannot find symbol
      @EnableAutoConfiguration
       ^
    symbol:   class EnableAutoConfiguration
    location: class Spring_boot_liquibaseTest
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8466-a2dd31e9/tests/src/org.springframework.boot/spring-boot-liquibase/4.1.0/src/test/java/org_springframework_boot/spring_boot_liquibase/Spring_boot_liquibaseTest.java:30: error: package org.springframework.boot.autoconfigure does not exist
  import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
                                               ^
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
13 actionable tasks: 1 executed, 12 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/8466-a2dd31e9/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.springframework.boot:spring-boot-liquibase:4.1.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
9 actionable tasks: 1 executed, 8 up-to-date
